# ansibeau

./: CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/ansibeau/: settings.py
backend/ansible_ui/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/: admin.py  fields.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_token.py  0005_add_task_model.py  0006_add_fatal_task_status.py
backend/api/services/: log_creator.py  log_parser.py
backend/api/static/admin/js/: token_generate.js
docker/: nginx.conf
frontend/: index.html  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: PlayCard.tsx  PlayHeader.tsx  StatusBadge.tsx
frontend/src/pages/: SubmitPage.tsx
frontend/src/services/: api.ts
src/components/: ServerCard.tsx
src/types/: ansible.ts
